--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-<body>
-    <section class="home">
+<body class="font-poppins">
+    <main class="min-h-screen bg-[#010313] bg-[url(./images/background.png.png)] bg-no-repeat bg-center">
+        <section class="home min-h-screen text-white flex flex-col justify-center items-center">
+            <div class="flex flex-col items-center gap-10">
+                <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
+                <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button class="btn bg-white text-black">Play Now</button>
+            </div>
+        </section>
+        <section class="play-ground">
 
-    </section>
-    <section class="play-ground">
+        </section>
+        <section class="score">
 
-    </section>
-    <section class="score">
-        
-    </section>
-
-
+        </section>
+    </main>
 </body>
 
 </html>
