--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -14,20 +14,95 @@
 
 <body class="font-poppins">
     <main class="min-h-screen bg-[#010313] bg-[url(./images/background.png.png)] bg-no-repeat bg-center">
-        <section class="home min-h-screen text-white flex flex-col justify-center items-center">
+        <!-- Home Screen -->
+        <section id="home-screen" class="home min-h-screen text-white flex flex-col justify-center items-center">
             <div class="flex flex-col items-center gap-10">
-                <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
+                <h1 class="font-anton uppercase text-9xl">Alpha Clash Pro</h1>
                 <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-                <button class="btn bg-white text-black">Play Now</button>
+                <button onclick="play()" class="btn bg-white text-black">Play Now</button>
             </div>
         </section>
-        <section class="play-ground">
+        <!-- Play Ground Start-->
+        <section id="play-ground" class="hidden">
+            <div class="flex flex-col items-center gap-20 pt-20">
+                <!-- playground screen -->
+                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB2]">
+                    <div class="flex justify-center">
+                        <p class="bg-[#2F2941] px-6 py-4 rounded-b-xl text-white">Don't watch keyboard  while playing...</p>
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p id="current-alphabet" class="text-black text-9xl font-bold uppercase">Y</p>
+                    </div>
+                </div>
+                <!-- Keyboard Start -->
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="q" class="kbd">q</kbd>
+                        <kbd id="w" class="kbd">w</kbd>
+                        <kbd id="e" class="kbd">e</kbd>
+                        <kbd id="r" class="kbd">r</kbd>
+                        <kbd id="t" class="kbd">t</kbd>
+                        <kbd id="y" class="kbd">y</kbd>
+                        <kbd id="u" class="kbd">u</kbd>
+                        <kbd id="i" class="kbd">i</kbd>
+                        <kbd id="o" class="kbd">o</kbd>
+                        <kbd id="p" class="kbd">p</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="a" class="kbd">a</kbd>
+                        <kbd id="s" class="kbd">s</kbd>
+                        <kbd id="d" class="kbd">d</kbd>
+                        <kbd id="f" class="kbd">f</kbd>
+                        <kbd id="g" class="kbd">g</kbd>
+                        <kbd id="h" class="kbd">h</kbd>
+                        <kbd id="j" class="kbd">j</kbd>
+                        <kbd id="k" class="kbd">k</kbd>
+                        <kbd id="l" class="kbd">l</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="z" class="kbd">z</kbd>
+                        <kbd id="x" class="kbd">x</kbd>
+                        <kbd id="c" class="kbd">c</kbd>
+                        <kbd id="v" class="kbd">v</kbd>
+                        <kbd id="b" class="kbd">b</kbd>
+                        <kbd id="n" class="kbd">n</kbd>
+                        <kbd id="m" class="kbd">m</kbd>
+                        <kbd id="/" class="kbd">/</kbd>
+                      </div>
+                </div>
+                <!-- Keyboard End -->
+                <!-- life and score -->
+                <div class="flex justify-between w-2/4">
+                    <button class="btn rounded-full bg-[#894189] text-white px-4 border-none">
+                        Life
+                        <img src="./images/group.svg.svg" alt="">
+                        <span>1</span>
+                      </button>
+                    <button class="btn rounded-full bg-[#894189] text-white px-4 border-none">
+                        Score
+                        <img src="./images/dollar.svg.svg" alt="">
+                        <span>1</span>
+                      </button>
+                </div>
+
+            </div>
 
         </section>
-        <section class="score">
-
+        <!-- Play Ground End -->
+        <!-- final score start -->
+        <section class="score flex justify-center items-center min-h-screen hidden">
+            <div class="text-white text-center space-y-5 bg-[#FFFFFF33] p-8 rounded-xl">
+                <h1 class="text-8xl">
+                    <span class="font-extrabold">Score:</span>
+                    <span>14</span>
+                </h1>
+                <button class="btn bg-white text-black border-none">Play Again</button>
+                <p>Practice will make you a Pro</p>
+            </div>
         </section>
     </main>
+    <script src="./scripts/utility.js"></script>
+    <script src="./scripts/alpha-clash.js"></script>
 </body>
 
 </html>
