life and score js complete

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                     <button class="btn rounded-full bg-[#894189] text-white px-4 border-none">
                         Life
                         <img src="./images/group.svg.svg" alt="">
-                        <span>1</span>
+                        <span id="current-life">5</span>
                       </button>
                     <button class="btn rounded-full bg-[#894189] text-white px-4 border-none">
                         Score
                         <img src="./images/dollar.svg.svg" alt="">
-                        <span>1</span>
+                        <span id="current-score">0</span>
                       </button>
                 </div>
 
