--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
         </section>
         <!-- Play Ground End -->
         <!-- final score start -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="final-score" class="score flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-5 bg-[#FFFFFF33] p-8 rounded-xl">
+                <h3 class="text-3xl text-white">Game Over !</h3>
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score:</span>
-                    <span>14</span>
+                    <span id="last-score">14</span>
                 </h1>
-                <button class="btn bg-white text-black border-none">Play Again</button>
+                <button onclick="play()" class="btn bg-white text-black border-none">Play Again</button>
                 <p>Practice will make you a Pro</p>
             </div>
         </section>
